package dev.dluks.minervamoney.enums;

public enum ERole {
    ROLE_USER,
    ROLE_ADMIN
}