CREATE TYPE transaction_type AS ENUM ('INCOME', 'EXPENSE');