@startuml MinervaMoney

    User "1" --> "*" Account : owns
    Account "1" --> "*" Transaction : has
    Transaction "*" --> "1" Category : belongs to
    User "1" --> "*" Category : creates
    User "*" --> "*" Role : has

    class User {
        UUID id
        String fullName
        String email
        String password
        Set~Role~ roles
        Set~Category~ customCategories
        Instant createdAt
        Instant updatedAt
    }

    class Account {
        UUID id
        String name
        BigDecimal currentBalance
        Instant createdAt
        User user
    }

    class Transaction {
        UUID id
        BigDecimal amount
        TransactionType type
        String description
        LocalDate date
        Instant createdAt
        Instant deletedAt
        String deletionReason
        boolean deleted
        Account account
        Category category
        +softDelete(String reason)
    }

    class Category {
        Long id
        String name
        String description
        Boolean active
        LocalDateTime createdAt
        User owner
        +isBaseCategory()
    }

    class Role {
        Long id
        ERole name
    }

    class TransactionType {
        <<enumeration>>
        INCOME
        EXPENSE
    }

    class ERole {
        <<enumeration>>
        ROLE_USER
        ROLE_ADMIN
    }

    @enduml